--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
         <header>
-                <div class="header">
+                <div class="header1">
                     <a href="#">
                         <img class="logo" src="image/logo.png" alt="logo">
                     </a>
